# combinacions

./: CMakeLists.txt  README.md  combi.c  combi.h  combinatoria.c  combinatoria.h  estructuras.h  lista.c  lista.h  main.c  main.h  paraleling.c  paraleling.h  texto.c  texto.h
